001-roman-numerals-converter/cfn-roman-numbers.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  oudFormation Template for Roman Numerals Converter Application. 
  This template creates Python Flask Web Application on Amazon Linux 2023  
  EC2 Instance with custom security group allowing http connections on port 80, 8080 and SSH connection on port 22. 
  Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.
Parameters:
  KeyPair:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance.
    Type: AWS::EC2::KeyPair::KeyName
    Default: first-key

  LatestAMIId:
    Description: Name of a Parameter Store parameter that stores the ID of the Amazon Machine Image (AMI).
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64

  InstanceType:
    Description: Enter t3.micro, t3.small, or t3.large. Default is t3.micro.
    Type: String
    Default: t3.micro
    AllowedValues:
      - t3.micro
      - t3.small
      - t3.large

Resources:
  MySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH & HTTP and port 8080
      GroupName: ogulcan-roman-numerals-converter
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  MyWebServer:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref KeyPair
      InstanceType: !Ref InstanceType
      ImageId: !Ref LatestAMIId
      SecurityGroupIds:
        - !Ref MySecGrp
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}
      UserData: !Base64 |
        #! /bin/bash
        dnf update -y
        dnf install python3 -y
        dnf install python3-pip -y
        pip3 install flask
        dnf install git -y
        FOLDER="https://raw.githubusercontent.com/OgulcanErdag/aws-projects/refs/heads/main/001-roman-numerals-converter/templates"
        cd /home/ec2-user
        wget -P templates ${FOLDER}/index.html
        wget -P templates ${FOLDER}/result.html
        wget https://raw.githubusercontent.com/OgulcanErdag/aws-projects/refs/heads/main/001-roman-numerals-converter/roman-numerals-converter-app.py
        python3 roman-numerals-converter-app.py

Outputs:
  WebsiteURL:
    Description: Roman Numerals Converter Application URL
    Value: !Sub
      - http://${URLName}
      - URLName: !GetAtt MyWebServer.PublicDnsName
